chore: update invalid reset code error message
