# docs/swagger.json
@@ -486,6 +486,12 @@
                         "description": "Filter posts published before this date (timestamp)",
                         "name": "endDate",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Comma-separated list of post IDs to exclude",
+                        "name": "excludeIds",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -981,12 +987,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utility.ResponseError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/utility.ResponseError"
                         }
@@ -1840,8 +1840,7 @@
                     "maxLength": 255
                 },
                 "tokenCaptcha": {
-                    "type": "string",
-                    "minLength": 100
+                    "type": "string"
                 }
             }
         },
@@ -1855,8 +1854,7 @@
             "properties": {
                 "code": {
                     "type": "string",
-                    "maxLength": 255,
-                    "minLength": 36
+                    "maxLength": 255
                 },
                 "confirmPassword": {
                     "type": "string"
@@ -1886,8 +1884,7 @@
                     "minLength": 8
                 },
                 "tokenCaptcha": {
-                    "type": "string",
-                    "minLength": 100
+                    "type": "string"
                 }
             }
         },
